--- a/Projekt/meteo/src/main/resources/templates/import-export.html
+++ b/Projekt/meteo/src/main/resources/templates/import-export.html
@@ -54,7 +54,7 @@
             <div>
                 <h3 class="float-md-start mb-0">Meteo</h3>
                 <nav class="nav nav-masthead justify-content-center float-md-end">
-                    <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="#">Home</a>
+                    <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="/">Home</a>
                     <a class="nav-link fw-bold py-1 px-0 active" href="#">Import/Export</a>
                     <a class="nav-link fw-bold py-1 px-0" href="#">API</a>
                 </nav>
