--- a/Projekt/meteo/src/main/resources/templates/import-export.html
+++ b/Projekt/meteo/src/main/resources/templates/import-export.html
@@ -62,6 +62,14 @@
         </header>
 
         <main class="form-signin w-100">
+            <form class="mt-3" method="post" action="/download" enctype="multipart/form-data">
+                <h1 class="h3 mb-3 fw-normal">Download data from OpenWeather</h1>
+                <div class="mb-3">
+                    <input class="form-control" type="text" id="town" name="town">
+                </div>
+                <input class="w-100 btn btn-lg btn-success" type="submit" value="Download" />
+            </form>
+
             <form method="post" action="/import" enctype="multipart/form-data">
                 <h1 class="h3 mb-3 fw-normal">Import data</h1>
 
