--- a/Projekt/meteo/src/main/resources/templates/import-export.html
+++ b/Projekt/meteo/src/main/resources/templates/import-export.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Meteo app</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-
     <style>
         .btn-light,
         .btn-light:hover,
@@ -46,6 +43,21 @@
             border-bottom-color: #fff;
         }
     </style>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment.min.js"></script>
+
+    <link
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css"
+        rel="stylesheet">
+
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js">
+        </script>
 </head>
 
 <body class="d-flex h-100 text-center text-bg-dark">
@@ -63,9 +75,9 @@
 
         <main class="form-signin w-100">
             <form class="mb-3" method="post" action="/download" enctype="multipart/form-data">
-                <h1 class="h3 mb-3 fw-normal">Download data from OpenWeather</h1>
+                <h1 class="h3 mb-3 fw-normal">Download record from OpenWeather</h1>
                 <div class="mb-3">
-                    <input class="form-control" type="text" id="town" name="town" placeholder="Write town name"
+                    <input class="form-control" type="text" id="town" name="town" placeholder="Enter town name"
                         required>
                 </div>
                 <input class="w-100 btn btn-lg btn-success" type="submit" value="Download" />
@@ -84,6 +96,30 @@
             <form class="mt-3" method="post" action="/export" enctype="multipart/form-data">
                 <h1 class="h3 mb-3 fw-normal">Export data</h1>
                 <input class="w-100 btn btn-lg btn-primary" type="submit" value="Export" />
+            </form>
+
+            <form class="mt-3" method="post" action="/remove-expired" enctype="multipart/form-data">
+                <h1 class="h3 mb-3 fw-normal">Delete data</h1>
+
+                <div style="isolation: isolate;">
+                    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+                    <div style="position: relative">
+                        <input class="form-control" type="text" id="datetime" name="datetime"
+                            placeholder="Select date and time or leave empty to delete expired" />
+                    </div>
+                    <script>
+                        $('#datetime').datetimepicker({
+                            format: 'YYYY-M-d hh:mm:ss'
+                        });
+                    </script>
+                </div>
+
+                <div class="custom-control custom-checkbox mb-2">
+                    <input type="checkbox" class="custom-control-input" id="delete-confirm" required>
+                    <label class="custom-control-label" for="delete-confirm">I agree to delete the expired
+                        records</label>
+                </div>
+                <input class="w-100 btn btn-lg btn-danger" type="submit" value="Delete" />
             </form>
         </main>
         <footer class="mt-auto text-white-50">
