--- a/Projekt/meteo/src/main/resources/templates/import-export.html
+++ b/Projekt/meteo/src/main/resources/templates/import-export.html
@@ -56,7 +56,8 @@
                 <nav class="nav nav-masthead justify-content-center float-md-end">
                     <a class="nav-link fw-bold py-1 px-0" aria-current="page" href="/">Home</a>
                     <a class="nav-link fw-bold py-1 px-0 active" href="/import-export">Import/Export</a>
-                    <a class="nav-link fw-bold py-1 px-0" href="#">API</a>
+                    <a class="nav-link fw-bold py-1 px-0" href="/data-view">Data list</a>
+                    <a class="nav-link fw-bold py-1 px-0" href="/api">API</a>
                 </nav>
             </div>
         </header>
