--- a/Projekt/meteo/src/main/resources/templates/data-view.html
+++ b/Projekt/meteo/src/main/resources/templates/data-view.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Meteo app - data view</title>
+    <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.png}" />
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -119,18 +120,75 @@
     </style>
 
     <script>
-        function loadStates() {
+        function fetch(address) {
             var xhr = new XMLHttpRequest();
-            xhr.open("GET", "list-states", true);
+            xhr.open("GET", address, true);
             xhr.setRequestHeader("Content-Type", "application/json");
             xhr.onreadystatechange = function () {
                 if (xhr.readyState === 4 && xhr.status === 200) {
-                    var json = JSON.parse(xhr.responseText);
-                    console.log(json);
-                    // TODO: load to table
+                    applyLoadedData(JSON.parse(xhr.responseText));
                 }
             };
             xhr.send();
+        }
+
+        function loadStates() {
+            fetch("list-states");
+            setActive(1);
+        }
+
+        function loadMeasurements() {
+            fetch("list-measurements");
+            setActive(2);
+        }
+
+        function setActive(index) {
+            var item1 = document.getElementById("item1");
+            var item2 = document.getElementById("item2");
+            item1.classList.remove("active");
+            item2.classList.remove("active");
+
+            switch (index) {
+                case 1:
+                    item1.classList.add("active");
+                    break;
+                case 2:
+                    item2.classList.add("active");
+                    break;
+            }
+        }
+
+        function applyLoadedData(json) {
+            var isHeaderSet = false;
+
+            var headerElement = document.getElementById("tableHeader");
+            var bodyElement = document.getElementById("tableBody");
+
+            headerElement.innerHTML = "";
+            bodyElement.innerHTML = "";
+
+            for (var k in json) {
+                if (!isHeaderSet) {
+                    for (var key in json[k]) {
+                        if (json[k].hasOwnProperty(key)) {
+                            var headerNode = document.createElement("th");
+                            headerNode.innerHTML = key;
+                            headerElement.appendChild(headerNode);
+                        }
+                    }
+                    isHeaderSet = true;
+                }
+
+                var tableTr = document.createElement("tr");
+                for (var key in json[k]) {
+                    if (json[k].hasOwnProperty(key)) {
+                        var bodyNode = document.createElement("th");
+                        bodyNode.innerHTML = json[k][key];
+                        tableTr.appendChild(bodyNode);
+                    }
+                }
+                bodyElement.appendChild(tableTr);
+            }
         }
     </script>
 </head>
@@ -154,18 +212,18 @@
                 <div class="sidebar-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item" onclick="loadStates()">
-                            <a class="nav-link active" href="#">
+                            <a class="nav-link" id="item1" href="#">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-bar-chart-2">
                                     <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                                     <polyline points="9 22 9 12 15 12 15 22"></polyline>
                                 </svg>
-                                States data <span class="sr-only">(current)</span>
+                                States data <span class="sr-only"></span>
                             </a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
+                        <li class="nav-item" onclick="loadMeasurements()">
+                            <a class="nav-link" id="item2" href="#">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
                                     stroke-linejoin="round" class="feather feather-layers">
@@ -184,7 +242,7 @@
                 <div class="table-responsive">
                     <table class="table table-striped table-sm">
                         <thead>
-                            <tr>
+                            <tr id="tableHeader">
                                 <th>#</th>
                                 <th>Header</th>
                                 <th>Header</th>
@@ -192,7 +250,7 @@
                                 <th>Header</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tableBody">
                             <tr>
                                 <td>1,001</td>
                                 <td>Lorem</td>
