--- a/Projekt/meteo/src/main/resources/templates/error.html
+++ b/Projekt/meteo/src/main/resources/templates/error.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Error Page</title>
+    <link rel="shortcut icon" type="image/png" th:href="@{/img/favicon.png}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
@@ -13,7 +14,7 @@
     <div class="d-flex align-items-center justify-content-center vh-100">
         <div class="text-center">
             <h1 class="display-1 fw-bold" th:utext="${errorCode}"></h1>
-            <p class="fs-3"> <span class="text-danger">Opps!</span> Page not found.</p>
+            <p class="fs-3"> <span class="text-danger">Opps!</span> Something happened.</p>
             <p class="lead" th:utext="${errorMessage}"></p>
             <a href="/" class="btn btn-primary">Go Home</a>
         </div>
