rework measurement id, add api for measurement

--- a/Projekt/meteo/src/main/resources/templates/data-view.html
+++ b/Projekt/meteo/src/main/resources/templates/data-view.html
@@ -133,12 +133,12 @@
         }
 
         function loadStates() {
-            fetch("list-states");
+            fetch("api/listMeasurement");
             setActive(1);
         }
 
         function loadMeasurements() {
-            fetch("list-measurements");
+            fetch("api/listTown");
             setActive(2);
         }
 
